# game24-rs

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs
src/trees/: catalan.m  mod.rs  tree.m  tree4.rs
src/utils/: basic.rs  combinatorics.rs  eval.rs  mod.rs
tests/: main.rs
